# pronote

./: .gitignore  404.html  CNAME  Cargo.toml  Dockerfile  README.md  Taskfile.yml  dev.docker-compose.yml  docker-compose.yml  index.html  template.env
.cargo/: config.toml
.github/workflows/: docker.yml  webapp-pages.yml
.media/: icon.afdesign
assets/: index-BWturUGr.css  index-CJZKDeBa.js  index-Cvoz_lJe.js  index-D2dQLFFN.js  index-D2z0qtx2.js  index-DAeVTki5.js  index-zuqJxMQf.css
database/: Cargo.toml
database/migrations/: 00001_init.sql
database/src/: database.rs  error.rs  lib.rs  models.rs
server/: Cargo.toml
server/src/: config.rs  jwt.rs  main.rs
server/src/api/: error.rs  mod.rs
server/src/api/guards/: auth.rs  mod.rs  validated.rs
server/src/api/models/: items.rs  list.rs  mod.rs
server/src/api/responders/: cookies.rs  either.rs  mod.rs
server/src/api/routes/: auth.rs  lists.rs  mod.rs  spa.rs
test/: Insomnium.json
webapp/: bun.lockb  index.html  package.json  vite.config.ts
webapp/src/: App.tsx  index.css
webapp/src/components/: Button.tsx  DurationPicker.tsx  Input.tsx  ListItem.tsx  ListItems.tsx  MaxWidthContainer.tsx  Modal.tsx  SideBar.tsx  Spoiler.tsx  TextArea.tsx  props.ts
webapp/src/components/Modals/: AddListModal.tsx  BugReport.tsx  DeleteModal.tsx  (+1 more)
webapp/src/hooks/: useApi.ts  useEffectAsync.tsx  useStoredTheme.ts
webapp/src/models/: models.ts
webapp/src/routes/: Foo.tsx  Home.tsx  List.tsx  Login.tsx  Main.tsx
webapp/src/services/: api.ts  localstore.ts  store.ts
webapp/src/theme/: theme.ts
